[#2] ignore permissions for now
Ignore permissions for now, add vouch-proxy with updated CORS
