# server/swagger_server/controllers/projects_controller.py
@@ -1,7 +1,6 @@
 import connexion
 import six
 
-from swagger_server.models.permission import Permission  # noqa: E501
 from swagger_server.models.project_long import ProjectLong  # noqa: E501
 from swagger_server.models.project_short import ProjectShort  # noqa: E501
 from swagger_server import util
@@ -53,7 +52,7 @@ def projects_add_tags_put(uuid, tags=None):  # noqa: E501
     return rc.projects_add_tags_put(uuid, tags)
 
 
-def projects_create_post(name, description, facility, tags=None, permissions=None, project_owners=None, project_members=None):  # noqa: E501
+def projects_create_post(name, description, facility, tags=None, project_owners=None, project_members=None):  # noqa: E501
     """create new project
 
     Create new project # noqa: E501
@@ -66,8 +65,6 @@ def projects_create_post(name, description, facility, tags=None, permissions=Non
     :type facility: str
     :param tags: 
     :type tags: List[str]
-    :param permissions: 
-    :type permissions: dict | bytes
     :param project_owners: Array of project owners as UUID
     :type project_owners: List[str]
     :param project_members: Array of project members as UUID
@@ -75,9 +72,7 @@ def projects_create_post(name, description, facility, tags=None, permissions=Non
 
     :rtype: ProjectLong
     """
-    if connexion.request.is_json:
-        permissions = request.from_dict(connexion.request.get_json())  # noqa: E501
-    return rc.projects_create_post(name, description, facility, tags, permissions, project_owners, project_members)
+    return rc.projects_create_post(name, description, facility, tags, project_owners, project_members)
 
 
 def projects_delete_delete(uuid):  # noqa: E501
@@ -151,7 +146,7 @@ def projects_remove_tags_put(uuid, tags=None):  # noqa: E501
     return rc.projects_remove_tags_put(uuid, tags)
 
 
-def projects_update_put(uuid, name=None, description=None, facility=None, permissions=None):  # noqa: E501
+def projects_update_put(uuid, name=None, description=None, facility=None):  # noqa: E501
     """update an existing project
 
     Update an existing project name, description or facility # noqa: E501
@@ -164,14 +159,10 @@ def projects_update_put(uuid, name=None, description=None, facility=None, permis
     :type description: str
     :param facility: 
     :type facility: str
-    :param permissions: 
-    :type permissions: dict | bytes
 
     :rtype: ProjectLong
     """
-    if connexion.request.is_json:
-        permissions = request.from_dict(connexion.request.get_json())  # noqa: E501
-    return rc.projects_update_put(uuid, name, description, facility, permissions)
+    return rc.projects_update_put(uuid, name, description, facility)
 
 
 def projects_uuid_get(uuid):  # noqa: E501
