# server/swagger_server/models/__init__.py
@@ -5,7 +5,6 @@ from __future__ import absolute_import
 # import models into model package
 from swagger_server.models.people_long import PeopleLong
 from swagger_server.models.people_short import PeopleShort
-from swagger_server.models.permission import Permission
 from swagger_server.models.project_long import ProjectLong
 from swagger_server.models.project_short import ProjectShort
 from swagger_server.models.version import Version
